# eventops-engine

./: .gitignore  README.md  pyproject.toml
apps/api/: Dockerfile
apps/api/app/: main.py
apps/worker/: Dockerfile  worker.py
docs/: License.md  Roadmap.md
docs/adr/: 0001-broker-rabbitmq.md
docs/articles/: m0-bootstrapping-backbone.md
infra/: .env.example  docker-compose.yml
