[tool.poetry]
name = "eventops"
version = "0.1.0"
description = "Event-driven backend with LLM enrichment"
authors = ["Danilo Cattaccini Nascimento <dcattaccini@gmail.com>"]
readme = "README.md"
packages = [{ include = "eventops" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
fastapi = "^0.129.0"
uvicorn = "^0.41.0"
celery = "^5.6.2"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"